--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css'/>
+    <title>Missed</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" type="text/css" href="category.css">
 </head>
+
 <body>
     {{{body}}}
 </body>
+
 </html>
