Got if statement working a little better

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,12 @@
 {{!-- <h1>{{title}}</h1> --}}
 
+<head>
+    <title>Missed</title>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" type="text/css" href="category.css">
+</head>
+
 <p>{{title}}</p>
 
 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
