--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="login.css">
+
+    <title>MISSED</title>
+</head>
+
 <body>
 
     <p>Welcome {{title}}</p>
@@ -18,4 +31,5 @@
 
         </div>
     </div>
+    <script src="login.js"></script>
 </body>
