--- a/public/category.css
+++ b/public/category.css
@@ -32,7 +32,7 @@ body {
 }
 
 .navigation ul {
-    margin-top:30px;
+    margin-top:10px;
     text-align:center;
     list-style:none; 
     margin-left:auto;
@@ -41,7 +41,7 @@ body {
 
 
 .menulist {
-    width:500px;
+    width:600px;
 }
 
 
@@ -139,7 +139,7 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 450px; 
+    width: 700px; 
 }
 
 body{
@@ -167,7 +167,7 @@ border-radius: 25px;
 border: 2px solid whitesmoke;
 padding: 2px; 
 width: 500px;
-height: 395px; 
+height: 470px; 
 }
 
 #cat {
@@ -196,6 +196,11 @@ height: 395px;
 #copyrights {
     text-align: center;
     font-size: 8px;
+}
+
+#btn {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 20px;
 }
 
 #myBtn {
