--- a/public/counselorlist.css
+++ b/public/counselorlist.css
@@ -189,3 +189,17 @@ body{
     margin: 10px 0;
     left: 400px;
   }
+
+  #chatbtn {
+    background-color: skyblue;
+    border-radius: 8px;
+    border: none;
+    color: white;
+    padding: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
