Got pages to register username

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="category.css">
 </head>
 
-<p>{{title}}</p>
+<p>Welcome {{user.username}}</p>
 
 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 <div id="topNav" class="navigation">
