--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -22,12 +22,18 @@
             <div class="signup"><a href="signup.html" id="signlink">Sign Up</a></div>
             <div class="login"><a href="login.html" id="loglink">Log In</a></div>
 
-            <div class="login-form">
-                <input type="text" placeholder="Email or Username" class="input"><br />
-                <input type="password" placeholder="Password" class="input"><br />
-                <div><a href="category.html"><img src="login.png" id="loginpng"></a></div>
-                <span><a href="#">I forgot my username or password.</a></span>
+            <div class="signup-form">
+                <form action="/signup" method="POST">
+                    <input name="username" type="text" placeholder="Email or Username" class="input"><br />
+                    <input name="password" type="password" placeholder="Password" class="input"><br />
+                    <div>
+                        <input class="submitButton" type="submit" value="Sign Up" />
+                    </div>
+                </form>
+                {{!-- <div><a href="category.html"><img src="login.png" id="loginpng"></a></div> --}}
+
             </div>
+
 
         </div>
     </div>
