Got most some more redirect stuff working

--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -26,6 +26,10 @@
                 <form action="/signup" method="POST">
                     <input name="username" type="text" placeholder="Email or Username" class="input"><br />
                     <input name="password" type="password" placeholder="Password" class="input"><br />
+                    <select name="type">
+                        <option value="student">I am a student</option>
+                        <option value="counselor">I am a counselor</option>
+                    </select>
                     <div>
                         <input class="submitButton" type="submit" value="Sign Up" />
                     </div>
