--- a/public/chatroom.css
+++ b/public/chatroom.css
@@ -1,3 +1,21 @@
+
+        body {
+            margin-top: 30px;
+        }
+        /* #messageArea {
+            display: none;
+        } */
+   
+
+#userFormArea {
+  border: #bdbdbd 2px;
+  box-shadow: black 2px 2px 2px 2px;
+  margin: 5px;
+  padding: 20px;
+  background-color: skyblue;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 /* Split the screen in half */
 .split {
     height: 28.5%;
@@ -7,7 +25,7 @@
     top: 0;
     overflow-x: hidden;
     padding-top: 20px;
-    border-ra
+    /* border-ra */
   }
   
   /* Control the left side */
@@ -15,6 +33,7 @@
     left: 0;
     background-color: skyblue;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
   }
   
   /* Control the right side */
