hid the messageArea

--- a/public/chatroom.css
+++ b/public/chatroom.css
@@ -2,9 +2,9 @@
         body {
             margin-top: 30px;
         }
-        /* #messageArea {
+        #messageArea {
             display: none;
-        } */
+        }
    
 
 #userFormArea {
